[gd_scene load_steps=2 format=3 uid="uid://cvkkg3wbiupmq"]

[ext_resource type="Script" path="res://Scripts/character_sheet.gd" id="1_6at8g"]

[node name="CharacterSheet" type="Node2D"]
script = ExtResource("1_6at8g")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CharacterNameLabel" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "CharacterName"

[node name="VSeparator" type="VSeparator" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="CharacterLevelLabel" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Character Level: 0"

[node name="VSeparator3" type="VSeparator" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ExperienceLabel" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Experience: 0"

[node name="VSeparator2" type="VSeparator" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="RaceLabel" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Race"
